# MindSet_test_25_03

./: .gitignore  README.md  dev.ipynb  pyproject.toml  rquirements.txt  run-uv-jupyter.sh  Тестовое задание.md
input/: example.geojson
output/: map.geojson
