[project]
name = "mindset-test-25-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "selenium>=4.29.0",
    "shapely>=2.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
